--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 server.port=8090
-
-
-
-spring.h2.console.enabled: true
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.open-in-view=false
+#spring.h2.console.enabled: true
+#spring.jpa.defer-datasource-initialization=true
+#spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
-
-business.persistence-name=businessWork
+#spring.datasource.username=sa
+#business.persistence-name=businessWork
