baseEntity 생성 및 section findById 수정 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,10 @@ spring.jpa.open-in-view=false
 #spring.jpa.defer-datasource-initialization=true
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:test
-<<<<<<< Updated upstream
 #spring.datasource.username=sa
 #business.persistence-name=businessWork
-=======
 spring.datasource.username=sa
 
 business.persistence-name=businessWork
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
->>>>>>> Stashed changes
+spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
