--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>business</groupId>
     <artifactId>BusinessWork</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>BusinessWork</name>
     <description>Demo project for Spring Boot</description>
     <properties>
