spring docker 설정까지

--- a/docker/spring/Dockerfile
+++ b/docker/spring/Dockerfile
@@ -1,10 +1,10 @@
 FROM openjdk:11
 MAINTAINER Eddy eddy@teamo2.kr
-
-EXPOSE 8090
 CMD ["./mvnw", "clean", "package", "-DskipTests"]
 
-ARG JAR_FILE_PATH=target/*.jar
-COPY ${JAR_FILE_PATH} "BusinessWork-0.0.1.jar"
+EXPOSE 8090
 
-ENTRYPOINT ["java", "-jar", "BusinessWork-0.0.1.jar"]
+ARG JAR_FILE_PATH=target/*.jar
+COPY ${JAR_FILE_PATH} "BusinessWork.jar"
+
+ENTRYPOINT ["java", "-jar", "BusinessWork.jar"]
