--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: "./docker/spring/Dockerfile"
     depends_on:
       - db
+#    volumes:
+#      - /my/project/dir:/app
     ports:
       - "${BUSINESS_PORT:-8090}:8090"
   db:
