postgres docker 볼륨 설정까지

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ sudo: required
 services:
   - docker
 
-#before_install:
-#  - docker build -t eddydocdoc/react-test-app -f ./frontend/Dockerfile.dev ./frontend
+before_install:
+  - docker build -t eddydocdoc/react-test-app -f ./frontend/Dockerfile.dev ./frontend
 
 script:
   - docker run -e CI=true eddydocdoc/react-test-app npm run test
