--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ before_install:
 #  - docker run -e CI=true
 
 after-success:
-  - docker build -t eddydocdoc/business-frontend ./docker/vue
-  - docker build -t eddydocdoc/business-backend ./docker/spring
-  - docker build -t eddydocdoc/business-db ./docker/postgres
+#  - docker build -t eddydocdoc/business-frontend ./docker/vue
+#  - docker build -t eddydocdoc/business-backend ./docker/spring
+#  - docker build -t eddydocdoc/business-db ./docker/postgres
 
 #  - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
 #
