--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     container_name: postgres # 컨테이너 이름(docker dashboard에 뜨는 이름)
     restart: always # 항상 재시작(명시되어 있지 않을 경우 no가 default이며 어떤 상황에서도 restart 안함)
     ports:
-      - "5432:5432" # HOST_PORT:CONTAINER_PORT로 host의 5432 포트를 container의 5432 포트와 매핑
+      - "5433:5432" # HOST_PORT:CONTAINER_PORT로 host의 5432 포트를 container의 5432 포트와 매핑
     environment:
       POSTGRES_USER: "${DB_USER_ID:-eddy}" # 선택 속성으로 POSTGRES_PASSWORD와 함께 사용되며, POSTGRES_USER명으로 superuser가 생성됨(작성하지 않을 경우 postgres 이름으로 superuser 생성)
       POSTGRES_PASSWORD: "${DB_USER_PASSWORD:-eddy}" # 필수 속성으로 postgreSQL의 superuser password(비어있거나 선언되지 않으면 안됨)
@@ -25,6 +25,8 @@ services:
     volumes:
       - ${POSTGRES_HOME_DIR:-./docker/postgres/data/data.sql}:/var/lib/postgresql/data/data.sql # ${POSTGRES_HOME_DIR}/data 부분이 실제
       - ${POSTGRES_HOME_DIR:-./docker/postgres/data/docker-entrypoint.sh}:/var/lib/postgresql/data/docker-entrypoint.sh # ${POSTGRES_HOME_DIR}/data 부분이 실제
+    networks:
+      - default
   spring:
     container_name: spring
     image: nginx:1.20
@@ -37,6 +39,8 @@ services:
 #      - /my/project/dir:/springboot
     ports:
       - "${BUSINESS_PORT:-8090}:8090"
+    networks:
+      - default
     environment:
-      DB_HOST: postgres:5432
+      DB_HOST: postgres:5433
     #docker-entrypoint-initdb.d
