--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
-  - openjdk8
+  - openjdk11
 
 branches:
   only:
@@ -21,8 +21,8 @@ before_install:
 #  - docker run -e CI=true
 
 after-success:
-#  - docker build -t eddydocdoc/business-frontend ./docker/vue
-#  - docker build -t eddydocdoc/business-backend ./docker/spring
+  - docker build -t eddydocdoc/business-frontend ./docker/vue
+  - docker build -t eddydocdoc/business-backend ./docker/spring
 #  - docker build -t eddydocdoc/business-db ./docker/postgres
 
 #  - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
