--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     build:
       context: .
       dockerfile: "./docker/spring/Dockerfile"
-    depends_on:
-      - postgres
+#    depends_on:
+#      - postgres
 #    volumes:
 #      - /my/project/dir:/springboot
     ports:
