db mysql 기준으로 변경

--- a/docker/spring/Dockerfile
+++ b/docker/spring/Dockerfile
@@ -1,6 +1,11 @@
 FROM openjdk:11
 MAINTAINER Eddy eddy@teamo2.kr
 
+RUN apt update
+RUN apt install net-tools
+RUN apt install sudo
+RUN apt install lsof
+
 CMD ["./mvnw", "clean", "package", "-DskipTests"]
 
 EXPOSE 8090
@@ -8,4 +13,4 @@ EXPOSE 8090
 ARG JAR_FILE_PATH=target/*.jar
 COPY ${JAR_FILE_PATH} "BusinessWork.jar"
 
-ENTRYPOINT ["java", "-jar", "BusinessWork.jar"]
+CMD ["nohup", "java", "-jar", "BusinessWork.jar", "&"]
